--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-EMAIL_ADDRESS=ranzelaldousgabriel@gmail.com
-EMAIL_APP_PASSWORD=kpsgagcodaldvvks
+#input your email address / email app password here
+
+EMAIL_ADDRESS=#<your email address here>
+EMAIL_APP_PASSWORD=#<your email app password>
